code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/MultiDayBenchmarks.md
# FactSet.SDK.BestExecutionAnalyticsforSmarterTradingBEAST.Model.MultiDayBenchmarks
MultiDay Benchmark object

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**TMinus5OpenPrice** | **double** | tMinus5OpenPrice | [optional] 
**TMinus4ClosePerfBps** | **double** | tMinus4ClosePerfBps | [optional] 
**TMinus3ClosePerfBps** | **double** | tMinus3ClosePerfBps | [optional] 
**TMinus2OpenPrice** | **double** | tMinus2OpenPrice | [optional] 
**TPlus3OpenPrice** | **double** | tPlus3OpenPrice | [optional] 
**TPlus1DateId** | **DateTime** | tPlus1DateId | [optional] 
**TPlus5ClosePrice** | **double** | tPlus5ClosePrice | [optional] 
**TMinus2ClosePerfBps** | **double** | tMinus2ClosePerfBps | [optional] 
**TMinus1ClosePerfBps** | **double** | tMinus1ClosePerfBps | [optional] 
**TMinus4DateId** | **DateTime** | tMinus4DateId | [optional] 
**TDateId** | **DateTime** | tDateId | [optional] 
**TMinus3ClosePrice** | **double** | tMinus3ClosePrice | [optional] 
**TMinus3OpenPerfBps** | **double** | tMinus3OpenPerfBps | [optional] 
**TPlus1ClosePrice** | **double** | tPlus1ClosePrice | [optional] 
**TOpenPrice** | **double** | tOpenPrice | [optional] 
**TPlus5OpenPerfBps** | **double** | tPlus5OpenPerfBps | [optional] 
**TMinus1DateId** | **DateTime** | tMinus1DateId | [optional] 
**TMinus5ClosePrice** | **double** | tMinus5ClosePrice | [optional] 
**TPlus2DateId** | **DateTime** | tPlus2DateId | [optional] 
**TPlus2ClosePrice** | **double** | tPlus2ClosePrice | [optional] 
**TMinus3DateId** | **DateTime** | tMinus3DateId | [optional] 
**TMinus2OpenPerfBps** | **double** | tMinus2OpenPerfBps | [optional] 
**TPlus5DateId** | **DateTime** | tPlus5DateId | [optional] 
**TPlus2OpenPrice** | **double** | tPlus2OpenPrice | [optional] 
**TMinus3OpenPrice** | **double** | tMinus3OpenPrice | [optional] 
**TMinus5ClosePerfBps** | **double** | tMinus5ClosePerfBps | [optional] 
**TMinus2ClosePrice** | **double** | tMinus2ClosePrice | [optional] 
**TClosePerfBps** | **double** | tClosePerfBps | [optional] 
**TPlus3ClosePrice** | **double** | tPlus3ClosePrice | [optional] 
**TMinus1OpenPerfBps** | **double** | tMinus1OpenPerfBps | [optional] 
**TOpenPerfBps** | **double** | tOpenPerfBps | [optional] 
**TPlus4OpenPerfBps** | **double** | tPlus4OpenPerfBps | [optional] 
**TMinus4ClosePrice** | **double** | tMinus4ClosePrice | [optional] 
**TMinus4OpenPerfBps** | **double** | tMinus4OpenPerfBps | [optional] 
**TMinus1ClosePrice** | **double** | tMinus1ClosePrice | [optional] 
**TPlus1ClosePerfBps** | **double** | tPlus1ClosePerfBps | [optional] 
**TPlus1OpenPrice** | **double** | tPlus1OpenPrice | [optional] 
**TPlus3DateId** | **DateTime** | tPlus3DateId | [optional] 
**TMinus4OpenPrice** | **double** | tMinus4OpenPrice | [optional] 
**TPlus4OpenPrice** | **double** | tPlus4OpenPrice | [optional] 
**TPlus1OpenPerfBps** | **double** | tPlus1OpenPerfBps | [optional] 
**TPlus5ClosePerfBps** | **double** | tPlus5ClosePerfBps | [optional] 
**TPlus4ClosePerfBps** | **double** | tPlus4ClosePerfBps | [optional] 
**TPlus2ClosePerfBps** | **double** | tPlus2ClosePerfBps | [optional] 
**TMinus1OpenPrice** | **double** | tMinus1OpenPrice | [optional] 
**TPlus3ClosePerfBps** | **double** | tPlus3ClosePerfBps | [optional] 
**TPlus4ClosePrice** | **double** | tPlus4ClosePrice | [optional] 
**TPlus2OpenPerfBps** | **double** | tPlus2OpenPerfBps | [optional] 
**TPlus4DateId** | **DateTime** | tPlus4DateId | [optional] 
**TPlus5OpenPrice** | **double** | tPlus5OpenPrice | [optional] 
**TClosePrice** | **double** | tClosePrice | [optional] 
**TMinus5DateId** | **DateTime** | tMinus5DateId | [optional] 
**TMinus2DateId** | **DateTime** | tMinus2DateId | [optional] 
**TMinus5OpenPerfBps** | **double** | tMinus5OpenPerfBps | [optional] 
**TPlus3OpenPerfBps** | **double** | tPlus3OpenPerfBps | [optional] 

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

